# cairn

./: .clang-format  CMakeLists.txt  LICENSE  README.md  sample.sh  test.sh
.github/workflows/: workflow.yml
engine/: engine.h
engine/animation/: README.md  animation.cpp  animation.h  component.h  frame.h  node.cpp  node.h  renderer.cpp  renderer.h  system.cpp  system.h
engine/ecs/: README.md  component.h  entity.cpp  entity.h  system.cpp  system.h
engine/graphics/: camera.h  graphics.cpp  graphics.h  image.cpp  image.h  mesh.cpp  mesh.h  shader.cpp  shader.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h  texture.h  tilemap.h
engine/image/: image.cpp  image.h
engine/input/: input.cpp  input.h  input_action.h  input_event.h  input_manager.cpp  input_manager.h  input_profile.cpp  input_profile.h
engine/io/: serializable.cpp  serializable.h  serializable_json.cpp  serializable_json.h
engine/log/: log.cpp  log.h
engine/memory/: CMakeLists.txt  buffer.h  memory.cpp  memory.h  types.h
engine/resource/: manager.h  resource.cpp  resource.h  system.h
engine/time/: ttime.cpp  ttime.h
engine/ui/: ui.h  ui_element.h  ui_image.h  ui_label.h  ui_manager.cpp  ui_manager.h
engine/window/: window.cpp  window.h  window_x11.cpp  window_x11.h
lib/stb/: stb_image.h  stb_image_write.h
resources/meshes/: square.mesh
resources/shaders/: fragment.glsl  vertex.glsl
resources/shaders/ui/: image.frag  text.frag  text.vert
samples/: CMakeLists.txt  animation.cpp  audio.cpp  log.cpp  main.cpp  time.cpp  window.cpp
samples/assets/animation/: flame_spritesheet.json
test/: CMakeLists.txt
test/memory/: memory.cpp
test/window/: window.cpp
tests/: CMakeLists.txt  test_animation.cpp
tests/animation/: test_animation.cpp
tests/ecs/: test_ecs.cpp
tests/memory/: buffer.cpp
tests/resource/: test_resource.cpp
tests/time/: time.cpp
tests/window/: window.cpp
